[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "fastlane-mcp"
version = "0.1.0"
description = "Reusable local MCP server for Android and React Native release workflows powered by fastlane."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" },
]
keywords = ["mcp", "fastmcp", "fastlane", "android", "react-native", "google-play"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "fastmcp>=2.0.0",
  "pydantic>=2.11.0",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
fastlane-mcp = "fastlane_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fastlane_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
